correccion sonar